bindings/haskell/src/Proven/FFI.hs


foreign import ccall "proven_content_type_is_json"
  c_proven_content_type_is_json :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> IO BoolResult

foreign import ccall "proven_content_type_is_xml"
  c_proven_content_type_is_xml :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> IO BoolResult

-- ============================================================================
-- SafeHex
-- ============================================================================

foreign import ccall "proven_hex_encode"
  c_proven_hex_encode :: Ptr Word8 -> CSize -> CChar -> IO StringResult

foreign import ccall "proven_hex_decode"
  c_proven_hex_decode :: Ptr Word8 -> CSize -> IO (Ptr ())

foreign import ccall "proven_hex_free"
  c_proven_hex_free :: Ptr () -> IO ()

-- ============================================================================
-- SafeUUID
-- ============================================================================

foreign import ccall "proven_uuid_v4"
  c_proven_uuid_v4 :: IO UUIDResult

foreign import ccall "proven_uuid_to_string"
  c_proven_uuid_to_string :: FFI_UUID -> IO StringResult

foreign import ccall "proven_uuid_parse"
  c_proven_uuid_parse :: Ptr Word8 -> CSize -> IO UUIDResult

foreign import ccall "proven_uuid_is_nil"
  c_proven_uuid_is_nil :: FFI_UUID -> IO CChar

foreign import ccall "proven_uuid_version"
  c_proven_uuid_version :: FFI_UUID -> IO Word8

-- ============================================================================
-- SafeCurrency
-- ============================================================================

foreign import ccall "proven_currency_parse"
  c_proven_currency_parse :: Ptr Word8 -> CSize -> IO CurrencyResult

foreign import ccall "proven_currency_format"
  c_proven_currency_format :: CLLong -> Word8 -> Word8 -> Word8 -> Word8 -> IO StringResult

-- ============================================================================
-- SafePhone
-- ============================================================================

foreign import ccall "proven_phone_parse"
  c_proven_phone_parse :: Ptr Word8 -> CSize -> IO PhoneResult

foreign import ccall "proven_phone_format_e164"
  c_proven_phone_format_e164 :: Word16 -> Word64 -> IO StringResult

-- ============================================================================
-- SafeJson
-- ============================================================================

foreign import ccall "proven_json_is_valid"
  c_proven_json_is_valid :: Ptr Word8 -> CSize -> IO BoolResult

foreign import ccall "proven_json_get_type"
  c_proven_json_get_type :: Ptr Word8 -> CSize -> IO JsonType

-- ============================================================================
-- SafeDateTime
-- ============================================================================

foreign import ccall "proven_datetime_parse"
  c_proven_datetime_parse :: Ptr Word8 -> CSize -> IO DateTimeResult

foreign import ccall "proven_datetime_format_iso8601"
  c_proven_datetime_format_iso8601 :: Ptr FFI_DateTime -> IO StringResult

foreign import ccall "proven_datetime_is_leap_year"
  c_proven_datetime_is_leap_year :: CInt -> IO CChar

foreign import ccall "proven_datetime_days_in_month"
  c_proven_datetime_days_in_month :: CInt -> Word8 -> IO Word8

-- ============================================================================
-- SafeFloat
-- ============================================================================

foreign import ccall "proven_float_div"
  c_proven_float_div :: CDouble -> CDouble -> IO FloatResult

foreign import ccall "proven_float_is_finite"
  c_proven_float_is_finite :: CDouble -> IO CChar

foreign import ccall "proven_float_is_nan"
  c_proven_float_is_nan :: CDouble -> IO CChar

foreign import ccall "proven_float_sqrt"
  c_proven_float_sqrt :: CDouble -> IO FloatResult

foreign import ccall "proven_float_ln"
  c_proven_float_ln :: CDouble -> IO FloatResult

-- ============================================================================
-- SafeVersion
-- ============================================================================

foreign import ccall "proven_version_parse"
  c_proven_version_parse :: Ptr Word8 -> CSize -> IO VersionResult

foreign import ccall "proven_version_compare"
  c_proven_version_compare :: Ptr FFI_SemanticVersion -> Ptr FFI_SemanticVersion -> IO CInt

foreign import ccall "proven_version_free"
  c_proven_version_free :: Ptr FFI_SemanticVersion -> IO ()

-- ============================================================================
-- SafeGeo
-- ============================================================================

foreign import ccall "proven_geo_validate"
  c_proven_geo_validate :: CDouble -> CDouble -> IO GeoResult

foreign import ccall "proven_geo_distance"
  c_proven_geo_distance :: Ptr GeoCoordinate -> Ptr GeoCoordinate -> IO FloatResult

foreign import ccall "proven_geo_in_bounds"
  c_proven_geo_in_bounds :: Ptr GeoCoordinate -> CDouble -> CDouble -> CDouble -> CDouble -> IO CChar

-- ============================================================================
-- SafeChecksum
-- ============================================================================

foreign import ccall "proven_checksum_crc32"
  c_proven_checksum_crc32 :: Ptr Word8 -> CSize -> IO IntResult

foreign import ccall "proven_checksum_verify_crc32"
  c_proven_checksum_verify_crc32 :: Ptr Word8 -> CSize -> Word32 -> IO BoolResult

-- ============================================================================
-- SafeProbability
-- ============================================================================

foreign import ccall "proven_probability_create"
  c_proven_probability_create :: CDouble -> IO CDouble

foreign import ccall "proven_probability_and"
  c_proven_probability_and :: CDouble -> CDouble -> IO CDouble

foreign import ccall "proven_probability_or_exclusive"
  c_proven_probability_or_exclusive :: CDouble -> CDouble -> IO CDouble

foreign import ccall "proven_probability_not"
  c_proven_probability_not :: CDouble -> IO CDouble

-- ============================================================================
-- SafeCalculator
-- ============================================================================

foreign import ccall "proven_calculator_eval"
  c_proven_calculator_eval :: Ptr Word8 -> CSize -> IO FloatResult

-- ============================================================================
-- SafePassword
-- ============================================================================

foreign import ccall "proven_password_validate"
  c_proven_password_validate :: Ptr Word8 -> CSize -> IO PasswordResult

foreign import ccall "proven_password_is_common"
  c_proven_password_is_common :: Ptr Word8 -> CSize -> IO CChar

-- ============================================================================
-- SafeColor
-- ============================================================================

foreign import ccall "proven_color_parse_hex"
  c_proven_color_parse_hex :: Ptr Word8 -> CSize -> IO ColorParseResult

foreign import ccall "proven_color_rgb_to_hsl"
  c_proven_color_rgb_to_hsl :: RGBColor -> IO HSLColor

foreign import ccall "proven_color_to_hex"
  c_proven_color_to_hex :: RGBColor -> IO StringResult

-- ============================================================================
-- SafeAngle
-- ============================================================================

foreign import ccall "proven_angle_deg_to_rad"
  c_proven_angle_deg_to_rad :: CDouble -> IO CDouble

foreign import ccall "proven_angle_rad_to_deg"
  c_proven_angle_rad_to_deg :: CDouble -> IO CDouble

foreign import ccall "proven_angle_normalize_degrees"
  c_proven_angle_normalize_degrees :: CDouble -> IO CDouble

foreign import ccall "proven_angle_normalize_radians"
  c_proven_angle_normalize_radians :: CDouble -> IO CDouble

-- ============================================================================
-- SafeUnit
-- ============================================================================

foreign import ccall "proven_unit_convert_length"
  c_proven_unit_convert_length :: CDouble -> LengthUnitC -> LengthUnitC -> IO FloatResult

foreign import ccall "proven_unit_convert_temp"
  c_proven_unit_convert_temp :: CDouble -> TempUnitC -> TempUnitC -> IO FloatResult

-- ============================================================================
-- SafeML
-- ============================================================================

foreign import ccall "proven_ml_sigmoid"
  c_proven_ml_sigmoid :: CDouble -> IO CDouble

foreign import ccall "proven_ml_relu"
  c_proven_ml_relu :: CDouble -> IO CDouble

foreign import ccall "proven_ml_leaky_relu"
  c_proven_ml_leaky_relu :: CDouble -> CDouble -> IO CDouble

foreign import ccall "proven_ml_clamp"
  c_proven_ml_clamp :: CDouble -> CDouble -> CDouble -> IO CDouble

-- ============================================================================
-- SafeRetry
-- ============================================================================

foreign import ccall "proven_retry_delay"
  c_proven_retry_delay :: Ptr RetryConfig -> Word32 -> IO Word64

foreign import ccall "proven_retry_should_retry"
  c_proven_retry_should_retry :: Ptr RetryConfig -> Word32 -> IO CChar
